camera control with mouse

--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,10 @@
   <div class="board">
     <canvas width="640" height="480"></canvas>
     <div class="panel">
-      <h3>Eye</h3>
-      <div class="slider input group">
-        <input type="range" id="eyeX" name="eyeX" class="slider" min="-30" max="30" step="0.1">
-        <label for="eyeX">X (<span id="eyeXValue"></span>)</label>
-      </div>
-      <div class="slider input group">
-        <input type="range" id="eyeY" name="eyeY" class="slider" min="-30" max="30" step="0.1">
-        <label for="eyeY">Y (<span id="eyeYValue"></span>)</label>
-      </div>
-      <div class="slider input group">
-        <input type="range" id="eyeZ" name="eyeZ" class="slider" min="-30" max="30" step="0.1">
-        <label for="eyeZ">Z (<span id="eyeZValue"></span>)</label>
-      </div>
+      <h3>Mouse Control</h3>
+      <p>&lt;Left Mouse Button&gt; - camera movement</p>
+      <p>CTRL+&lt;Left Mouse Button&gt; - camera rotation</p>
+      <p>&lt;Mouse Wheel&gt; - zoom</p>
     </div>
   </div>
 </body>
